<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_home"
            android:icon="@drawable/home_vector"
            android:title="@string/Home" />
        <item
            android:id="@+id/menu_item_add_friends"
            android:icon="@drawable/add_friends"
            android:title="@string/Add_Friends" />
        <item
            android:id="@+id/menu_item_friends"
            android:icon="@drawable/friends_vector"
            android:title="@string/Friends" />
        <item
            android:id="@+id/menu_item_profile"
            android:icon="@drawable/profile_vector"
            android:title="@string/Profile" />
        <item
            android:id="@+id/menu_item_settings"
            android:icon="@drawable/settings"
            android:title="@string/Settings" />
        <item
            android:id="@+id/menu_item_logout"
            android:icon="@drawable/logout_vector"
            android:title="@string/Logout" />
    </group>
</menu>